--- a/CareDirection/CareDirection/Resources/Storyboard/Home.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Home.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cxP-ub-Md2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cxP-ub-Md2">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -438,13 +438,27 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="103" height="129"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     <subviews>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J6R-Ii-Wga">
+                                                                        <view contentMode="scaleToFill" id="g8i-Dn-Ymk">
                                                                             <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
+                                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                            <subviews>
+                                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J6R-Ii-Wga">
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
+                                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                    <constraints>
+                                                                                        <constraint firstAttribute="height" constant="103" id="73u-aJ-uog"/>
+                                                                                        <constraint firstAttribute="width" constant="103" id="bYW-uo-Vlo"/>
+                                                                                    </constraints>
+                                                                                </imageView>
+                                                                            </subviews>
+                                                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                                             <constraints>
-                                                                                <constraint firstAttribute="height" constant="103" id="OjL-29-lt2"/>
-                                                                                <constraint firstAttribute="width" constant="103" id="nyN-v9-TvM"/>
+                                                                                <constraint firstItem="J6R-Ii-Wga" firstAttribute="top" secondItem="g8i-Dn-Ymk" secondAttribute="top" id="Dcn-Z7-Z8Z"/>
+                                                                                <constraint firstAttribute="trailing" secondItem="J6R-Ii-Wga" secondAttribute="trailing" id="d1X-rm-Qca"/>
+                                                                                <constraint firstItem="J6R-Ii-Wga" firstAttribute="leading" secondItem="g8i-Dn-Ymk" secondAttribute="leading" id="dOH-NC-wDE"/>
+                                                                                <constraint firstAttribute="bottom" secondItem="J6R-Ii-Wga" secondAttribute="bottom" id="w8C-N5-khl"/>
                                                                             </constraints>
-                                                                        </imageView>
+                                                                        </view>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="제품이름라벨" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCA-AO-mZG">
                                                                             <rect key="frame" x="20" y="111" width="81" height="15"/>
                                                                             <constraints>
@@ -464,29 +478,23 @@
                                                                         </imageView>
                                                                     </subviews>
                                                                     <constraints>
-                                                                        <constraint firstItem="J6R-Ii-Wga" firstAttribute="leading" secondItem="vAl-az-Sa3" secondAttribute="leading" id="1vb-cF-t0E"/>
-                                                                        <constraint firstItem="J6R-Ii-Wga" firstAttribute="top" secondItem="vAl-az-Sa3" secondAttribute="top" id="6ei-Gq-KPK"/>
-                                                                        <constraint firstItem="TCA-AO-mZG" firstAttribute="top" secondItem="J6R-Ii-Wga" secondAttribute="bottom" constant="8" id="EWa-fl-EGp"/>
                                                                         <constraint firstItem="WQM-Zs-jk6" firstAttribute="leading" secondItem="vAl-az-Sa3" secondAttribute="leading" id="FtJ-kE-LDo"/>
-                                                                        <constraint firstAttribute="trailing" secondItem="J6R-Ii-Wga" secondAttribute="trailing" id="KQP-2a-4Pz"/>
                                                                         <constraint firstAttribute="bottom" secondItem="TCA-AO-mZG" secondAttribute="bottom" constant="3" id="QDO-yp-KuL"/>
                                                                         <constraint firstAttribute="trailing" secondItem="TCA-AO-mZG" secondAttribute="trailing" constant="2" id="TxZ-67-Gz9"/>
                                                                         <constraint firstAttribute="bottom" secondItem="WQM-Zs-jk6" secondAttribute="bottom" constant="2" id="VXG-eh-L1z"/>
-                                                                        <constraint firstItem="WQM-Zs-jk6" firstAttribute="top" secondItem="J6R-Ii-Wga" secondAttribute="bottom" constant="6" id="hmz-z8-U3R"/>
+                                                                        <constraint firstItem="TCA-AO-mZG" firstAttribute="leading" secondItem="WQM-Zs-jk6" secondAttribute="trailing" constant="2" id="YYp-I9-lFk"/>
+                                                                        <constraint firstItem="WQM-Zs-jk6" firstAttribute="top" secondItem="g8i-Dn-Ymk" secondAttribute="bottom" constant="6" id="aeC-Bt-ei1"/>
                                                                     </constraints>
                                                                 </collectionViewCellContentView>
                                                                 <size key="customSize" width="103" height="129"/>
                                                                 <connections>
                                                                     <outlet property="productCheckImage" destination="WQM-Zs-jk6" id="Rig-35-pBA"/>
                                                                     <outlet property="productImage" destination="J6R-Ii-Wga" id="IQN-SJ-Ixb"/>
+                                                                    <outlet property="productImgBackgroudView" destination="g8i-Dn-Ymk" id="ZY4-Sw-T8w"/>
                                                                     <outlet property="productName" destination="TCA-AO-mZG" id="y8O-DE-GfY"/>
                                                                 </connections>
                                                             </collectionViewCell>
                                                         </cells>
-                                                        <connections>
-                                                            <outlet property="dataSource" destination="J9C-3r-fs6" id="DaX-ou-Uqe"/>
-                                                            <outlet property="delegate" destination="J9C-3r-fs6" id="kYg-hq-dWz"/>
-                                                        </connections>
                                                     </collectionView>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
